# HOHQMesh

./: .gitignore  .typos.toml  .zenodo.json  404.html  AUTHORS.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HOHQMesh.mak  HOHQMeshMain.f90  HOMeshMain.f90  HorrendousAssumptionsAndAlgorithms.txt  LICENSE.md  Makefile  README.md  README.rtf  SECURITY.md  SpecMesh+3DMain.f90  SpecMeshMain.f90  bootstrap  createcoverage  index.html  paper.bib  paper.md  sitemap.xml
3DSource/: 3DMeshController.f90  Geometry3D.f90  HexMeshObjects.f90  Mesh3DOutputMethods.f90  ReaderExceptions.f90  SimpleExtrusion.f90  SimpleSweep.f90
ApproximationOfGaussianCurvature/: index.html
Benchmarks/: BenchmarkFiles.txt
Categories/: ObjectArrayAdditions.f90
Contrib/: .gitignore
Curves/: fmin.f90
Documentation/: .gitignore  HOHQMeshDoc.md  HOMeshForDevelopers.md  README.md  Releases.md  download_github_images  mkdocs.yml  preparedocs
Examples/: 2DExampleMatrix.numbers  ControlTemplate.control  README-Examples.txt  README.md
Foundation/: CommandLineReader.f90  Encoder.f90  FatalErrorException.f90  Geometry.f90  Misc.f90  ProgramGlobals.f90  SMConstants.f90  Shortcuts.f90  TimerClass.f90
Gallery/: index.html
IO/: ControlFileReader.f90  FileAndStringProcessing.f90  MeshOutputMethods.f90
Mesh/: BoundaryEdgeCleaning.f90  Connections.f90  InterfaceElementMethods.f90  LaplaceMeshSmoother.f90  MeshBoundaryMethods.f90  MeshCleaner.f90  MeshGeneratorMethods.f90  MeshOperationsModule.f90  MeshQualityAnalysis.f90  MeshSmoother.f90  SpringMeshSmoother.f90
MeshObjects/: ElementOperations.f90  SMMeshObjects.f90
News/: index.html
Project/: MeshProject.f90
QuadTreeGrid/: NodesTemplates.f90  QuadTreeGridClass.f90  QuadTreeGridGenerator.f90  QuadTreeTemplateOperations.f90  Templates.f90
Source/: CMakeLists.txt  HOHQMesh.f90  HOHQMeshMain.f90  HOQMesh.f90  LibAccessMain.f90
Source/3DSource/: 3DMeshController.f90  HexMeshObjects.f90  Mesh3DOutputMethods.f90  ReaderExceptions.f90  SimpleSweep.f90  SweeperClass.f90
Source/3DSource/Geometry/: CurveInterpolantClass.f90  Frenet.f90  Geometry3D.f90  InterpolationAndDerivatives.f90  TransfiniteMapClass.f90  Utilities.f90
Source/BoundaryOptimization/: BoundaryErrors.f90  ConstrainedMultiH1Optimizer.f90  CurveOptimization.f90  GaussQuadrature.f90  IntervalSearch.f90  LegendreAlgorithms.f90  LegendreTests.f90  MultiSegmentModalCurve.f90  OptimizerTests.f90
Source/Categories/: ObjectArrayAdditions.f90
Source/Curves/: fmin.f90
Source/Curves/ContinuousCurves/: EquationEvaluatorClass.f90  ParametricEquationCurveClass.f90  SMChainedCurveClass.f90  SMCircularArc.f90  SMCurveClass.f90  SMEllipticArc.f90  SMLine.f90  SMPolynomialInterpolantCurveClass.f90  SMSplineCurveClass.f90
Source/Curves/DiscreteCurves/: ChainedSegmentedCurveClass.f90  CurveConversions.f90  FRSegmentedCurveClass.f90  MultiSegmentCurve.f90  MultiSegmentModalCurve.f90  MultiSegmentNodalCurve.f90  SegmentedCurveArrayClass.f90
Source/Foundation/: CommandLineReader.f90  Encoder.f90  FatalErrorException.f90  Geometry.f90  LineReflectionModule.f90  Misc.f90  ProgramGlobals.f90  SMConstants.f90  Shortcuts.f90  TimerClass.f90
Source/IO/: ControlFileReader.f90  FileAndStringProcessing.f90  MeshOutputMethods.f90  SMScanner.f90  Scanning.f90
Source/Julia/: HQMWrapper.jl
Source/LibHOHQMesh/: InteropUtilities.f90  LibCollectionActions.f90  LibConstants.f90  LibObjectAccessors.f90  LibObjectGetters.f90  LibProjectActions.f90  LibProjectInterface.f90
Source/Mesh/: BoundaryEdgeCleaning.f90  Connections.f90  InterfaceElementMethods.f90  LaplaceMeshSmoother.f90  MeshBoundaryMethods.f90  MeshCleaner.f90  MeshGeneratorMethods.f90  MeshOperationsModule.f90  MeshQualityAnalysis.f90  MeshSmoother.f90  SpringMeshSmoother.f90
Source/MeshObjects/: ElementOperations.f90  SMMeshObjects.f90
Source/Project/: MeshProject.f90
Source/Project/Mesh/: SMMeshClass.f90
Source/Project/Model/: SMModel.f90
Source/Project/Sizer/: Sizer.f90  SizerControls.f90
Source/QuadTreeGrid/: NodesTemplates.f90  QuadTreeGridClass.f90  QuadTreeGridGenerator.f90  QuadTreeTemplateOperations.f90  Templates.f90
Source/Surfaces/: BiCubicClass.f90  DataFileTopographyClass.f90  GaussianCurvature.f90  ParametricEquationTopographyClass.f90  PrincipalCurvature.f90  SMTopographyClass.f90
Source/Testing/: CurveTests.f90  LibTests.f90  MeshingTests.f90  ScannerTests.f90  TestDataClass.f90
TheISMMeshFileFormats/: index.html
Utilities/: bootstrap  createcoverage  createrelease  exercisecommandlineargs  testrelease
WorkflowTools/: index.html
appendix/: index.html
(+296 files in other folders)
