PROJECT(HOHQMesh)

SET(HOHQMESH "HOHQMesh")
SET(HOHQMESH_LIB "hohqmesh")

FILE(GLOB_RECURSE HOHQMESH_SRC ${CMAKE_CURRENT_SOURCE_DIR} "*.f90")

SET(CMAKE_Fortran_MODULE_DIRECTORY ${CMAKE_BINARY_DIR}/include)

ADD_LIBRARY(${HOHQMESH_LIB} STATIC 
            ${HOHQMESH_SRC})
            
ADD_EXECUTABLE(${HOHQMESH} ${HOHQMESH_SRC})
TARGET_LINK_LIBRARIES(${HOHQMESH} ${HOHQMESH_LIB} "${FTOBJ_PREFIX}/lib/libftobject.a")

# Install libhohqmesh.a
INSTALL(TARGETS ${HOHQMESH_LIB} 
        ARCHIVE DESTINATION lib
        LIBRARY DESTINATION lib)

# Add .mod files to include/ directory 
INSTALL(DIRECTORY ${CMAKE_BINARY_DIR}/include DESTINATION .)

# Install HOHQMesh binary under bin/
INSTALL(TARGETS ${HOHQMESH} DESTINATION bin)
